@@ -8,9 +8,9 @@
 # Misc config variables
 #
 
-BuildDate = 20080806
+BuildDate = 20081208
 
-Version = 1.0.0 RC6 OMEGA
+Version = 1.0.0 RC7 OMEGA
 
 CodeName = Priamos
 
@@ -145,8 +145,8 @@ ZIP = bzip2
 # PHP FastCGI data
 #
 
-# Posible values: fastcgi, fcgid
-PHP_FASTCGI = fastcgi
+# Posible values: fcgid, fastcgi
+PHP_FASTCGI = fcgid
 
 PHP5_FASTCGI_BIN = /usr/lib/php5/bin/php-cgi
 
