@@ -167,6 +167,7 @@ Make sure you are logged in as root and MySQL is running.
 	# cp -v /var/www/ispcp/engine/messager/ispcp-db-keys.pl /tmp/ispcp/var/www/ispcp/engine/messager/
 	# cp -v /var/www/ispcp/gui/include/ispcp-db-keys.php /tmp/ispcp/var/www/ispcp/gui/include/
 	# cp -v /var/www/ispcp/gui/themes/user_logos/* /tmp/ispcp/var/www/ispcp/gui/themes/user_logos/
+	# cp -TvR /var/www/ispcp/gui/domain_default_page /tmp/ispcp/var/www/ispcp/gui/domain_default_page
 
    If updating from RC3 or higher:
 	# cp -v /var/www/ispcp/gui/tools/pma/config.inc.php /tmp/ispcp/var/www/ispcp/gui/tools/pma/
@@ -181,11 +182,6 @@ Make sure you are logged in as root and MySQL is running.
 
 9. Backup ispcp.conf and copy the /etc directory into your system (you may make backups):
 	# mv -v /etc/ispcp/ispcp.conf /etc/ispcp/ispcp.old.conf
-
-   If updating from RC5:
-	# cp -Rv /tmp/ispcp/etc/ispcp/* /etc/ispcp
-
-   else:
 	# cp -Rv /tmp/ispcp/etc/* /etc/
 
 10. Now it's time to update your installation. Change into the engine directory:
